--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
-  --numberOfRows: 3;
-  --numberOfColumns: 6;
+  --numberOfRows: 2;
+  --numberOfColumns: 5;
   --cursorState: not-allowed;
   --cardScale: 1;
 }
@@ -157,5 +157,68 @@ body {
   background-color: #7158e2;
   padding: 0.5rem;
   border: 0;
+  cursor: pointer;
+}
+
+.config-btn {
+  font-size: 2rem;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.overlay {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: block;
+  z-index: 9;
+}
+
+.overlay-hidden {
+  display: none;
+}
+
+.levels {
+  position: absolute;
+  top: 100px;
+  right: 50px;
+  padding: 1rem;
+  width: fit-content;
+  color: #7158e2;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: top 0.3s;
+  z-index: 10;
+}
+
+.levels-hidden {
+  top: -150px;
+}
+
+.levels h3 {
+  font-size: 1.5rem;
+  padding: 1rem 0;
+}
+
+.levels label {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-right: 0.8rem;
+  cursor: pointer;
+}
+
+.levels input {
+  width: 20px;
+  height: 20px;
+  position: relative;
+  top: 0.2rem;
   cursor: pointer;
 }
